--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <aside>
                 <p><a href="./public/Movie-Ranking-1.html">Movie Ranking Website</a></p>
             </aside>
-            <img src="../4.3 HTML Porfolio Project/assets/images/TiffanyMovies.png" width="200" alt="website screenshot"/>
+            <img src="./assets/images/TiffanyMovies.png" width="200" alt="website screenshot"/>
             <aside>
                 <p><a href="./public/Birthday-Invite-Tiffany.html">Birthday Invite Website</a></p>
              </aside>
-            <img src="../4.3 HTML Porfolio Project/assets/images/TiffanyBirthdayInvite.png" width="200" alt="website screenshot"/>
+            <img src="./assets/images/TiffanyBirthdayInvite.png" width="200" alt="website screenshot"/>
     <br/>
     <hr/>
     <br/>
